force-app/main/default/objects/TechnicalMemberSupport__c/TechnicalMemberSupport__c.object-meta.xml
<CustomObject>
    <label>Technical Member Support</label>
    <nameField>
        <displayFormat>TTS-{00000}</displayFormat>
        <label>Technical Member Support  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Members Supports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>