force-app/main/default/objects/TechnicalMemberSupport__c/fields/NAM__c.field-meta.xml
<CustomField>
    <fullName>NAM__c</fullName>
    <label>NAM</label>
    <referenceTo>NAM__c</referenceTo>
    <relationshipLabel>Technical Members Supports</relationshipLabel>
    <relationshipName>TechTeamsSupports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>