force-app/main/default/objects/TechnicalMemberSupport__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>IF(Text(Status__c) = &apos;Pending&apos;, &apos;----&apos;,  
  IF(Text(Status__c) = &apos;Supported&apos;, IMAGE(&quot;/resource/support/supported1.png&quot;, &quot;Supported&quot;, 40, 40),
      IMAGE(&quot;/resource/support/notsupported1.png&quot;, &quot;Not Supported&quot;, 30, 30)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>