force-app/main/default/objects/TechnicalMemberSupport__c/validationRules/editRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>editRecord</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Responsible__c &lt;&gt; $User.Id,
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    NOT(ISNEW()),
    ISPICKVAL(NAM__r.Status__c, &apos;AMC&apos;),
    ISPICKVAL(NAM__r.ClosedOutStatus__c, &apos;Execution&apos;)
)</errorConditionFormula>
    <errorMessage>You don&apos;t have access to this record</errorMessage>
</ValidationRule>