force-app/main/default/objects/TechnicalMemberSupport__c/validationRules/editRecordWrongStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>editRecordWrongStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    AND(
    Text(NAM__r.Status__c) &lt;&gt; &apos;Tech Team&apos;,
    Text(NAM__r.ClosedOutStatus__c) &lt;&gt; &apos;Tech Team&apos;,
    NOT(ISNEW()),
    AND(
        NOT(ISPICKVAL(NAM__r.Status__c, &apos;AMC&apos;)),
        NOT(ISPICKVAL(NAM__r.ClosedOutStatus__c, &apos;Execution&apos;))
        )
    )
)</errorConditionFormula>
    <errorMessage>Record is not in the Tech Team status</errorMessage>
</ValidationRule>